--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -17,4 +17,4 @@ jobs:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
         run: |
           npm i -g @liara/cli@9
-          liara deploy --app="Acompassionate-albattani-re7jqu-iu" --api-token="$LIARA_TOKEN" --no-app-logs
+          liara deploy --app="Acompassionate-albattani-re7jqu-iu" --api-token="$LIARA_TOKEN" --no-app-logs --port=3000
